syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer{
	rpc GetCustomerInfo (CustometLookupModel) returns (CustomerModel);
	rpc GetNewCustomers (NewCustomerRequest) returns (stream CustomerModel);
}

message NewCustomerRequest {

}

message CustometLookupModel{
	int32 userId = 1;
}

message CustomerModel {
	string firstName = 1;
	string lastName = 2;
	string email = 3;
	bool isAlive = 4;
	int32 age = 5;
}